syntax = "proto3";
package nft;

service NftService {
	rpc MintNft(MintNftRequest) returns (MintNftResponse);
	rpc BurnNft(BurnNftRequest) returns (BurnNftResponse);
}

message MintNftRequest {
	string name = 1;
	string description = 2;
	bytes imageBytes = 3;
	string to = 4;
}

message MintNftResponse {
	string transactionHash = 1;
}

message BurnNftRequest {
	int32 tokenId = 1;
}

message BurnNftResponse {
	string transactionHash = 1;
}